wrote some test for nu_plugin_custom_values

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,11 @@ jobs:
             tests-dir: ./rust/nu_plugin_example
             needs:
               - rust
+          - name: nu_plugin_custom_values
+            plugin: ./target/release/nu_plugin_custom_values
+            tests-dir: ./rust/nu_plugin_custom_values
+            needs:
+              - rust
     
     steps:
       - name: Checkout Repo
