--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,3 +111,7 @@ jobs:
 
       - name: Run tests
         run: ./nu -n -c 'use testing.nu; testing run-tests --path ${{ matrix.plugin.tests-dir }} --plugins ["${{ matrix.plugin.plugin }}"]'
+
+      - if: contains(matrix.plugin.needs, 'rust')
+        name: Run Rust-based tests
+        run: cargo test --package ${{ matrix.plugin.name }}
